k8s/deployment.backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antarcticmap-backend
  labels:
    app: antarcticmap-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antarcticmap-backend
  template:
    metadata:
      labels:
        app: antarcticmap-backend
    spec:
      containers:
        - name: antarcticmap-backend
          image: __IMAGE_BACKEND__:__IMAGE_TAG__
          command: ["./app"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: 2048Mi
              cpu: "0.5"
          volumeMounts:
            - name: gis-data
              mountPath: /data
            - name: www-data
              mountPath: /www_data
      volumes:
        - name: gis-data
          hostPath:
            path: __GIS_DATA_PATH__
        - name: www-data
          hostPath:
            path: __WWW_DATA_PATH__
