k8s/deployment.django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antarcticmap-django
  labels:
    app: antarcticmap-django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antarcticmap-django
  template:
    metadata:
      labels:
        app: antarcticmap-django
    spec:
      imagePullSecrets:
        - name: yeti2-pull-secret
      containers:
        - name: antarcticmap-django
          image: __IMAGE_DJANGO__:__IMAGE_TAG__
          command: ["./app"]
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: 2048Mi
              cpu: "2"
          volumeMounts:
            - name: gis-data
              mountPath: /data
            - name: www-data
              mountPath: /www_data
      volumes:
        - name: gis-data
          hostPath:
            path: __ANTARCTIC_MAP_GIS_DATA__
        - name: www-data
          hostPath:
            path: __ANTARCTIC_MAP_WWW_DATA__
