k8s/deployment.frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antarcticmap-frontend
  labels:
    app: antarcticmap-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antarcticmap-frontend
  template:
    metadata:
      labels:
        app: antarcticmap-frontend
    spec:
      containers:
        - name: antarcticmap-frontend
          image: __IMAGE_FRONTEND__:__IMAGE_TAG__
          imagePullPolicy: Always
          resources:
            limits:
              memory: 256Mi
              cpu: "0.1"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: gis-data
              mountPath: /data
            - name: download-data
              mountPath: /data/download
      volumes:
        - name: gis-data
          hostPath:
            path: __GIS_DATA_PATH__
        - name: download-data
          hostPath:
            path: __WWW_DATA_PATH__
