k8s/service.backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: antarcticmap-backend
spec:
  selector:
    app: antarcticmap-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
