k8s/service.django.yaml
kind: Service
apiVersion: v1
metadata:
  name: antarcticmap-django
spec:
  selector:
    app: antarcticmap-django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
