k8s/service.frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: antarcticmap-frontend
spec:
  selector:
    app: antarcticmap-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
