k8s/service.statics.yaml
kind: Service
apiVersion: v1
metadata:
  name: antarcticmap-statics
spec:
  selector:
    app: antarcticmap-statics
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
